[gd_scene load_steps=10 format=3 uid="uid://chjr5lr238fag"]

[ext_resource type="Script" path="res://scenes/other/overlay.gd" id="1_fihfc"]
[ext_resource type="Theme" uid="uid://doxhakuvlogxj" path="res://themes/flexi_button_orange_shadow.tres" id="1_owe52"]
[ext_resource type="PackedScene" uid="uid://bu7xqjd8obe0a" path="res://scenes/other/buttons/blank_button.tscn" id="2_vfjka"]
[ext_resource type="Theme" uid="uid://bb14jpmq3rnmf" path="res://themes/red_button.tres" id="3_h3ldm"]
[ext_resource type="Script" path="res://scenes/main_menu/add_room_overlay.gd" id="3_yih8x"]
[ext_resource type="Theme" uid="uid://3mshnn7sijsm" path="res://themes/blue_button.tres" id="6_ybh3v"]
[ext_resource type="FontFile" uid="uid://b2dee8vg1lqv" path="res://fonts/LilitaOne-Regular.ttf" id="7_sjhe5"]
[ext_resource type="StyleBox" uid="uid://bwsva0drgc1qm" path="res://themes/grey_box.tres" id="8_6agok"]
[ext_resource type="Theme" uid="uid://b8pd42bnktgig" path="res://themes/green_button.tres" id="9_i2mdh"]

[node name="Overlay" type="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -578.0
offset_top = -327.5
offset_right = 578.0
offset_bottom = 327.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(578, 327)
color = Color(0, 0, 0, 0.313726)
script = ExtResource("1_fihfc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -548.5
offset_top = -306.0
offset_right = 548.5
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(548, 306)
theme = ExtResource("1_owe52")
script = ExtResource("3_yih8x")

[node name="CloseButton" parent="Panel" instance=ExtResource("2_vfjka")]
layout_mode = 1
offset_left = -532.5
offset_top = -285.0
offset_right = -296.5
offset_bottom = -220.0
theme = ExtResource("3_h3ldm")
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -252.0
offset_right = 256.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_ybh3v")
text = "Put room name here:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -188.5
offset_right = 280.0
offset_bottom = -115.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_sjhe5")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("8_6agok")
placeholder_text = "Room Name"
alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -92.0
offset_right = 256.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_ybh3v")
text = "Put room code here:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomCode" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -28.5
offset_right = 280.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_sjhe5")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("8_6agok")
placeholder_text = "Room Code"
alignment = 1

[node name="Submit" parent="." instance=ExtResource("2_vfjka")]
layout_mode = 1
offset_left = -136.0
offset_top = 68.0
offset_right = 144.0
offset_bottom = 146.0
text = "Submit"
_theme = ExtResource("9_i2mdh")

[node name="ErrorMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = 156.5
offset_right = 384.0
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_ybh3v")
theme_override_colors/font_color = Color(0.807843, 0, 0.00392157, 1)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="finished" from="Panel/CloseButton/AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="Submit" to="Panel" method="_on_submit_pressed"]

[editable path="Panel/CloseButton"]
